fixed menu spacing on home page

--- a/src/styles.css
+++ b/src/styles.css
@@ -339,7 +339,9 @@ footer {
 
   .nav-container.active {
       display: block;
-      padding: 5px; /* Show the navigation list when active */
+      padding: 10px; /* Show the navigation list when active */
+      margin-top: 60px;
+      margin-right: 17px;
   }
 
   .nav-container li {
@@ -353,6 +355,7 @@ footer {
       color: white;
       text-decoration: none;
       font-size: 15px; /* Adjust as needed */
+      margin-top: -100px;
   }
 
   .nav-button {
